# fastapiedu

./: .env  .gitignore  alembic.ini  crud.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 01f90e0034e3_create_order_with_nullable.py  1a518c09d8a4_create_order_product_association.py  63197fe11a15_create_product_table.py  cc7037766699_create_profile_post_user_tables.py
api_v1/products/: crud.py  schemas.py  views.py
core/: config.py  database.py
core/models/: db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
