[tool.poetry]
name = "my-api"
version = "0.1.0"
description = ""
authors = ["DeminAnton <demantser@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
asyncio = "^3.4.3"
pydantic-settings = "^2.3.0"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
psycopg = {extras = ["binary"], version = "^3.1.19"}
asyncpg = {extras = ["binary"], version = "^0.29.0"}


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
